--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -10,7 +10,7 @@ body {
   color: #606c71; }
 
 a {
-  color: #1e6bb8;
+  color: #222222;
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
@@ -54,13 +54,25 @@ a {
       margin-left: 0; } }
 
 .page-header {
-  color: #fff;
-  text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+    color: #fff;
+    text-align: center;
+    background-color: #999999;
+    background: url("texture.png") repeat;
+    padding-bottom: 20px !important;
+}
+
+.page-header div.col {
+    float: left;
+    width: 50%;
+}
+.page-header div.col.logo img {
+    max-width: 200px;
+}
+
+.clearfix { clear: both; }
 
 @media screen and (min-width: 64em) {
-  .page-header {
+    .page-header {
     padding: 5rem 6rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
@@ -68,8 +80,12 @@ a {
     padding: 3rem 4rem; } }
 
 @media screen and (max-width: 42em) {
-  .page-header {
-    padding: 2rem 1rem; } }
+    .page-header { padding: 2rem 1rem; }
+    .page-header div.col {
+        float: none;
+        width: auto;
+    }
+}
 
 .project-name {
   margin-top: 0;
@@ -111,8 +127,8 @@ a {
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
   margin-top: 2rem;
   margin-bottom: 1rem;
-  font-weight: normal;
-  color: #159957; }
+  font-weight: 600;
+  color: #E91E63; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
