--- a/test/modulestest/ModuleDefault/views/layout.phtml
+++ b/test/modulestest/ModuleDefault/views/layout.phtml
@@ -1,7 +1,2 @@
-<?php
-/**
- * Created by IntelliJ IDEA.
- * User: jackie
- * Date: 22/09/16
- * Time: 23:17
- */
+Temos o layout
+<?php echo $content; ?>
