--- a/src/ModuleError/views/error/error.phtml
+++ b/src/ModuleError/views/error/error.phtml
@@ -1,52 +1,65 @@
-<div class="page-header">
+<div class="page-header mt-5">
   <h1 class="text-danger">
     <i class="fa fa-exclamation-circle"></i> Default Error Handler
   </h1>
+  <p>
+    Sorry, but the page you are looking for isn't working for while.
+    <br/>
+    Maybe it's in an emergency maintaining and it shouldn't happen to handsome people like you, of course.
+  </p>
 </div>
 <?php if (DEVELOPMENT && isset($exception)): ?>
-<div class="row">
-  <div class="col-sm-12">
-    <div class="panel panel-danger">
-      <div class="panel-heading">System Error</div>
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <td>Message:</td>
-            <td><?php echo $exception->getMessage(); ?></td>
-          </tr>
+  <div class="row">
+    <div class="col-sm-12">
+      <table class="table table-striped table-bordered table-responsive">
+        <thead class="thead-dark">
+        <tr>
+          <th scope="col">Message:</th>
+          <th scope="col"><?php echo $exception->getMessage(); ?></th>
+        </tr>
         </thead>
         <tbody>
+        <tr>
+          <td scope="row">File:</td>
+          <td><?php echo $exception->getFile(); ?> :: (( <b><?php echo $exception->getLine(); ?></b> ))</td>
+        </tr>
+        <?php if ($exception->getTrace()): ?>
           <tr>
-            <td>File:</td>
-            <td><?php echo $exception->getFile(); ?> :: (( <b><?php echo $exception->getLine(); ?></b> ))</td>
+            <td scope="row">Stack Trace:</td>
+            <td>
+              <?php foreach ($exception->getTrace() as $key => $trace): ?>
+                <div class="well well-sm">
+                  #<?php echo $key + 1; ?> - File: <?php echo $trace['file']; ?>::(<?php echo $trace['line']; ?>)
+                  <br />
+                  <?php if ($trace['args']): ?>
+                    <?php echo $trace['function']; ?>(<?php echo getTraceArgsAsString($trace['args']); ?>);
+                  <?php else: ?>
+                    <?php echo $trace['function']; ?>();
+                  <?php endif; ?>
+                </div>
+              <?php endforeach; ?>
+            </td>
           </tr>
-						<?php if ($exception->getTrace()): ?>
-						  <tr>
-                <td>Stack Trace:</td>
-                <td>
-									<?php foreach ($exception->getTrace() as $key => $trace): ?>
-										<div class="well well-sm">
-											#<?php echo $key + 1; ?> - File: <?php echo $trace['file']; ?>::(<?php echo $trace['line']; ?>)
-											<br />
-											<?php if ($trace['args']): ?>
-												<?php echo $trace['function']; ?>(<?php echo getTraceArgsAsString($trace['args']); ?>);
-											<?php else: ?>
-												<?php echo $trace['function']; ?>();
-											<?php endif; ?>
-										</div>
-									<?php endforeach; ?>
-								</td>
-              </tr>
-						<?php endif; ?>
-					</tbody>
+        <?php endif; ?>
+        </tbody>
         <tfoot>
-          <tr>
-            <td>String:</td>
-            <td><div class="well well-sm"><?php echo nl2br($exception->__toString()); ?></div></td>
-          </tr>
+        <tr>
+          <td scope="row">String:</td>
+          <td scope="row"><div class="well well-sm"><?php echo nl2br($exception->__toString()); ?></div></td>
+        </tr>
         </tfoot>
       </table>
     </div>
   </div>
-</div>
+<?php else: ?>
+  <div class="jumbotron">
+    <p class="lead">Keep calm and continue the navigation going to the previous page or to the Home</p>
+    <div class="mt-5">
+      <a class="btn btn-light btn-lg" href="javascript:void(0);" onclick="window.history.back();" role="button">
+        <i class="fa fa-arrow-left"></i>
+        Go Back
+      </a>
+      <a class="btn btn-primary btn-lg" href="<?php echo $this->baseUrl(); ?>" role="button">Home Page</a>
+    </div>
+  </div>
 <?php endif; ?>
