--- a/test/resources/files/functions/form-select-1.phtml
+++ b/test/resources/files/functions/form-select-1.phtml
@@ -1,3 +1,3 @@
 <select id="test" name="test">
-  <option value="" selected="selected">Selecione!</option>
+  <option value="" selected="selected">Select One!</option>
 </select>
